package Tree;

public abstract class DataElement {
    
    public abstract boolean equals(DataElement data);
    public abstract boolean isGreater(DataElement data);
}

